Create fragment arch